--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
         <h4> The Different Regions</h4>
         <div class="list">
         <ul id="regionpics">
-            <li><a href="/pacific.html" title="Pacific Region"><img src="/images/mappac.jpeg" alt="map of the pacific west region"></a></li>
+            <li><a href="/pacificwest.html" title="Pacific Region"><img src="/images/mappac.jpeg" alt="map of the pacific west region"></a></li>
             <li><a href="/intermountain.html"><img src="/images/mapinter.jpeg" title="Intermountain Region"></a></li>
             <li><a href="/midwest.html"><img src="/images/mapmidw.jpeg" title="Midwest Region"></a></li>
             <li><a href="/southeast.html"><img src="/images/mapsouth.jpeg" title="Southeast Region"></a></li>
