--- a/northeast-rev.html
+++ b/northeast-rev.html
@@ -33,7 +33,7 @@
     <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col">
             <div class="card">
-            <img src="northeast/acadia(maine).jpeg" title="Acadia National Park" class="card-img-top" alt="card-grid-image">
+            <img src="images/acadia(maine).jpeg" title="Acadia National Park" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Acadia National Park</h5>
                 <p class="card-text">Located in Maine, this park offers scenic vistas of rugged coastline, granite peaks, and pristine lakes. Visitors can enjoy hiking, biking, camping, and a variety of water-based activities.</p>
@@ -43,7 +43,7 @@
         <!--zion-->
         <div class="col">
             <div class="card">
-            <img src="northeast/shenandoah.jpeg" title="Shenandoah National Park" class="card-img-top" alt="card-grid-image">
+            <img src="images/shenandoah.jpeg" title="Shenandoah National Park" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Shenandoah National Park</h5>
                 <p class="card-text">Situated in Virginia, this park features the scenic Blue Ridge Mountains and the famous Skyline Drive. The park offers hiking trails, campgrounds, and stunning views of the Shenandoah Valley.</p>
@@ -53,7 +53,7 @@
         <!--yellowstone-->
         <div class="col">
             <div class="card">
-            <img src="northeast/delawarewatergap.jpeg" title="Delaware Water Gap National Park" class="card-img-top" alt="card-grid-image">
+            <img src="images/delawarewatergap.jpeg" title="Delaware Water Gap National Park" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Delaware Water Gap National Park</h5>
                 <p class="card-text">
@@ -64,7 +64,7 @@
         <!--grand teton-->
         <div class="col">
             <div class="card">
-            <img src="northeast/capecod.png" title="Cape Cod National Park" class="card-img-top" alt="card-grid-image">
+            <img src="images/capecod.png" title="Cape Cod National Park" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Cape Cod National Park</h5>
                 <p class="card-text"> This Massachusetts park is famous for its sandy beaches, dunes, and salt marshes. Visitors can explore historic lighthouses, bike along scenic paths, and observe a variety of wildlife.</p>
