--- a/southeast-rev.html
+++ b/southeast-rev.html
@@ -33,7 +33,7 @@
     <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col">
             <div class="card">
-            <img src="southeast/Oconaluftee_Valley_Overlook_low_rez_for_web_or_social_8f145a91-e25c-4e1d-ba6b-e719fb510523.jpg" title="Great Smoky Mountains National Park" class="card-img-top" alt="card-grid-image">
+            <img src="images/Oconaluftee_Valley_Overlook_low_rez_for_web_or_social_8f145a91-e25c-4e1d-ba6b-e719fb510523.jpg" title="Great Smoky Mountains National Park" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Great Smoky Mountains National Park</h5>
                 <p class="card-text">Located in Tennessee and North Carolina, this park is known for its misty mountain views, diverse wildlife, and historic buildings.</p>
@@ -43,7 +43,7 @@
         <!--zion-->
         <div class="col">
             <div class="card">
-            <img src="southeast/everglades.jpg" title="Evergladdes National Park" class="card-img-top" alt="card-grid-image">
+            <img src="images/everglades.jpg" title="Evergladdes National Park" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Everglades National Park</h5>
                 <p class="card-text">Spanning 1.5 million acres in southern Florida, this park is home to unique wetland ecosystems, including sawgrass marshes, mangrove forests, and cypress swamps.</p>
@@ -53,7 +53,7 @@
         <!--yellowstone-->
         <div class="col">
             <div class="card">
-            <img src="southeast/congaree.webp" title="Cogaree National Park" class="card-img-top" alt="card-grid-image">
+            <img src="images/congaree.webp" title="Cogaree National Park" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Cogaree National Park</h5>
                 <p class="card-text">
@@ -64,7 +64,7 @@
         <!--grand teton-->
         <div class="col">
             <div class="card">
-            <img src="southeast/mammoth.jpeg" title="Mammoth Cave National Park" class="card-img-top" alt="card-grid-image">
+            <img src="images/mammoth.jpeg" title="Mammoth Cave National Park" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Mammoth Cave National Park</h5>
                 <p class="card-text"> Located in Kentucky, this park is home to the world's longest known cave system, with more than 400 miles of explored passageways. Above ground, visitors can also explore the park's forests and river valleys.</p>
