--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 </div>
 
 
-        <h3 class="learn">LEARN MORE</h3>
+        <h3 class="learn">SIGN UP FOR OUR MAILING LIST</h3>
     </div>
     <div class="forum">
         <form action="#" method="post">
