--- a/northeast.html
+++ b/northeast.html
@@ -52,6 +52,6 @@
         </div>
     </div>
     <footer>
-        <h3>SIGN UP FOR OUR MAILING LIST</h3>
+        <h3>AVO COMP @126</h3>
     </footer>
 </body>
