--- a/intermountain.html
+++ b/intermountain.html
@@ -43,10 +43,10 @@
             <h1>MOST POPULAR PARKS</h1>
             <div class="park-links-container">
                 <ul>
-                    <li>1. Grand Canyon National Park</li>
-                    <li>2. Zion National Park</li>
-                    <li>3. Yellowstone National Park</li>
-                    <li>4. Arches National Park</li>
+                    <li><a href="https://www.nps.gov/grca/index.htm">1. Grand Canyon National Park</a></li>
+                    <li><a href="https://www.nps.gov/zion/index.htm">2. Zion National Park</a></li>
+                    <li><a href="https://www.nps.gov/yell/index.htm">3. Yellowstone National Park</a></li>
+                    <li><a href="https://www.nps.gov/arch/index.htm">4. Arches National Park</a></li>
                 </ul>
             </div>
         </div>
