--- a/midwest.html
+++ b/midwest.html
@@ -43,10 +43,10 @@
             <h1>MOST POPULAR PARKS</h1>
             <div class="park-links-container">
                 <ul>
-                    <li>1. Badlands National Park</li>
-                    <li>2. Indiana Dunes National Park</li>
-                    <li>3. Cuyahoga Valley National Park</li>
-                    <li>4. Voyageurs National Park</li>
+                    <li><a href="https://www.nps.gov/badl/index.htm">1. Badlands National Park</a></li>
+                    <li><a href="https://www.nps.gov/indu/index.htm">2. Indiana Dunes National Park</a></li>
+                    <li><a href="https://www.nps.gov/cuva/index.htm">3. Cuyahoga Valley National Park</a></li>
+                    <li><a href="https://www.nps.gov/voya/index.htm">4. Voyageurs National Park</a></li>
                 </ul>
             </div>
         </div>
