--- a/northeast.html
+++ b/northeast.html
@@ -43,10 +43,10 @@
             <h1>MOST POPULAR PARKS</h1>
             <div class="park-links-container">
                 <ul>
-                    <li>1. Acadia National Park</li>
-                    <li>2. Shenandoah National Park</li>
-                    <li>3. Cape Cod National Seashore</li>
-                    <li>4. Great Falls National Park</li>
+                    <li><a href="https://www.nps.gov/acad/index.htm">1. Acadia National Park</a></li>
+                    <li><a href="https://www.nps.gov/shen/index.htm">2. Shenandoah National Park</a></li>
+                    <li><a href="https://www.nps.gov/caco/index.htm">3. Cape Cod National Seashore</a></li>
+                    <li><a href="https://www.nps.gov/grfa/index.htm">4. Great Falls National Park</a></li>
                 </ul>
             </div>
         </div>
