--- a/pacificwest.html
+++ b/pacificwest.html
@@ -43,10 +43,10 @@
             <h1>MOST POPULAR PARKS</h1>
             <div class="park-links-container">
                 <ul>
-                    <li>1. Death Valley National Park</li>
-                    <li>2. Hawaii Volcanoes National Park</li>
-                    <li>3. Joshua Tree National Park</li>
-                    <li>4. Mount Rainier National Park</li>
+                    <li><a href="https://www.nps.gov/deva/index.htm">1. Death Valley National Park</a></li>
+                    <li><a href="https://www.nps.gov/havo/index.htm">2. Hawaii Volcanoes National Park</a></li>
+                    <li><a href="https://www.nps.gov/jotr/index.htm">3. Joshua Tree National Park</a></li>
+                    <li><a href="https://www.nps.gov/mora/index.htm">4. Mount Rainier National Park</a></li>
                 </ul>
             </div>
         </div>
