--- a/sources.html
+++ b/sources.html
@@ -39,7 +39,7 @@ viewBox="0 0 64 64">
 </header>
 
 <body>
-    
+
 <div class="title-card">
     <h2>SOURCES</h2>
 </div>
@@ -55,10 +55,10 @@ viewBox="0 0 64 64">
     <a href="https://commons.wikimedia.org/wiki/File:US-NationalParkService-Logo.svg"><li class="list-group-item">NPS Logo</li></a>
     <a href="https://icons8.com/icon/set/popular/sf-regular"><li class="list-group-item">Sun Logo</li></a>
     <!--Pacific Region-->
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
+    <a href="https://www.travelcraterlake.com/"><li class="list-group-item">Crater Lake</li></a>
+    <a href="https://www.outsideonline.com/adventure-travel/national-parks/hawaii-volcanoes-national-park-travel-guide/"><li class="list-group-item">Hawaii</li></a>
+    <a href="https://www.traveloffpath.com/8-reasons-to-visit-joshua-tree-national-park-this-spring/"><li class="list-group-item">Joshua Tree</li></a>
+    <a href="https://thedyrt.com/magazine/local/great-basin-national-park/"><li class="list-group-item">Great Basin</li></a>
     <!--Intermountain Region-->
     <a href=""><li class="list-group-item">Grand Canyon</li></a>
     <a href=""><li class="list-group-item">Zion</li></a>
@@ -70,15 +70,15 @@ viewBox="0 0 64 64">
     <a href="https://www.outsideonline.com/adventure-travel/national-parks/cuyahoga-valley-national-park-63-parks-traveler/"><li class="list-group-item">Cuyahoga</li></a>
     <a href="https://www.indianadunes.com/explore-the-dunes/indiana-dunes-state-park/"><li class="list-group-item">Indiana Dunes</li></a>
     <!--Northeast Region-->
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
+    <a href="https://www.mapquest.com/travel/acadia-national-park/"><li class="list-group-item">Acadia</li></a>
+    <a href="https://roadtrippers.com/destinations/shenandoah-national-park/"><li class="list-group-item">Shenandoah</li></a>
+    <a href="https://www.poconomountains.com/plan-your-vacation/explore-our-area/delaware-water-gap/"><li class="list-group-item">Delaware Gap Water</li></a>
+    <a href="https://www.facebook.com/CapeCodNPS/"><li class="list-group-item">Cape Cod</li></a>
     <!--Southeast Region-->
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
-    <a href=""><li class="list-group-item">Cras justo odio</li></a>
+    <a href="https://www.explorebrysoncity.com/things-to-do/great-smoky-mountains-national-park/"><li class="list-group-item">Great Smokys</li></a>
+    <a href=https://en.wikipedia.org/wiki/Everglades_National_Park"><li class="list-group-item">Everglades</li></a>
+    <a href="https://www.travelandleisure.com/mammoth-cave-national-park-7373262"><li class="list-group-item">Mammoth cave</li></a>
+    <a href="https://www.cntraveler.com/activities/congaree-national-park"><li class="list-group-item">Cogaree</li></a>
     <!---->
     </ul>
   </div>
