--- a/home.html
+++ b/home.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="utf-8">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>
         National Parks
     </title>
@@ -85,11 +88,17 @@
     </div>
     <footer class="footer">
         <ul class="contact">
+            <li id="sources">
+                <a href="sources.html"> <button type="button" class="btn btn-outline-success">SOURCES</button></a>
+            </li>
             <li>CONTACT US</li>
             <li>email@unc.edu</li>
             <li>(919)999-9999</li>
+            
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</body>
 </body>
 
 
