--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
     <footer class="footer">
         <ul class="contact">
             <li id="sources">
-                <a href="sources.html"> <button type="button" class="btn btn-outline-success">SOURCES</button></a>
+                <a href="sources.html"> <button type="button" class="btn btn-outline-light">SOURCES</button></a>
             </li>
             <li>CONTACT US</li>
             <li>email@unc.edu</li>
