--- a/sources.html
+++ b/sources.html
@@ -60,10 +60,10 @@ viewBox="0 0 64 64">
     <a href="https://www.traveloffpath.com/8-reasons-to-visit-joshua-tree-national-park-this-spring/"><li class="list-group-item">Joshua Tree</li></a>
     <a href="https://thedyrt.com/magazine/local/great-basin-national-park/"><li class="list-group-item">Great Basin</li></a>
     <!--Intermountain Region-->
-    <a href=""><li class="list-group-item">Grand Canyon</li></a>
-    <a href=""><li class="list-group-item">Zion</li></a>
-    <a href=""><li class="list-group-item">Grand Teton</li></a>
-    <a href=""><li class="list-group-item">Yellowstone</li></a>
+    <a href="https://people.com/human-interest/wisconsin-man-day-hike-found-dead-trail-grand-canyon-national-park/"><li class="list-group-item">Grand Canyon</li></a>
+    <a href="https://www.nationalgeographic.com/travel/national-parks/article/zion-national-park"><li class="list-group-item">Zion</li></a>
+    <a href="https://www.audleytravel.com/us/usa/places-to-go/wyoming/teton-village-grand-teton-national-park"><li class="list-group-item">Grand Teton</li></a>
+    <a href="https://yellowstonesafari.com/a-brief-history-of-yellowstone-national-park/"><li class="list-group-item">Yellowstone</li></a>
     <!--Midwest Region-->
     <a href="http://www.thegreatestroadtrip.com/isle-royale-national-park"><li class="list-group-item">Isley Royale</li></a>
     <a href="https://morethanjustparks.com/best-things-to-do-voyageurs-national-park/"><li class="list-group-item">Voyageurs</li></a>
