--- a/revinter.html
+++ b/revinter.html
@@ -18,7 +18,7 @@
 <body>
   <header class="header-box">
     <div class="navbar">
-      <a href="home.html" id="avo" title="sun logo">
+      <a href="index.html" id="avo" title="sun logo">
         <svg  class="my-svg" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 width="48" height="48"
 viewBox="0 0 64 64">
@@ -26,9 +26,9 @@ viewBox="0 0 64 64">
 </svg>
       </a>
         <div class="menu-items">
-          <a href="home.html">HOME</a></div>
+          <a href="index.html">HOME</a></div>
         <div class="menu-items">
-          <a href="home.html">MAILING LIST</a></div>
+          <a href="index.html">MAILING LIST</a></div>
         <div class="menu-items">
           <a href="visit.html">PLAN YOUR VISIT</a></div>
     </div>
