--- a/sources.html
+++ b/sources.html
@@ -30,9 +30,9 @@ viewBox="0 0 64 64">
 </svg>
       </a>
         <div class="menu-items">
-          <a href="home.html">HOME</a></div>
+          <a href="index.html">HOME</a></div>
         <div class="menu-items">
-          <a href="home.html"><Main>MAILING LIST</Main></a></div>
+          <a href="index.html"><Main>MAILING LIST</Main></a></div>
         <div class="menu-items">
           <a href="visit.html">PLAN YOUR VISIT</a></div>
     </div>
